// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmPINModal Component Renders correctly for PIN change 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  presentationStyle="fullScreen"
  statusBarTranslucent={true}
  style={
    Object {
      "backgroundColor": "#000000",
    }
  }
  transparent={false}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
    style={
      Object {
        "backgroundColor": "#42803E",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#42803E",
        "borderWidth": 0,
        "elevation": 0,
        "flexDirection": "row",
        "minHeight": 44,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "zIndex": 2,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityLabel="Global.Back"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 44,
            "left": 44,
            "right": 44,
            "top": 44,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="com.ariesbifold:id/BackButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 15,
              "marginRight": 0,
              "minHeight": 26,
              "minWidth": 26,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 26,
                },
                undefined,
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            󰅁
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "maxWidth": "68%",
          "width": "100%",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={2}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 28,
              "fontWeight": "bold",
            },
            Object {
              "textAlign": "center",
            },
          ]
        }
      >
        Title
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    />
  </View>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Object {
        "backgroundColor": "#000000",
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        keyboardShouldPersistTaps="handled"
      >
        <View>
          <View
            style={
              Object {
                "backgroundColor": "#000000",
                "flex": 1,
                "padding": 20,
              }
            }
          >
            <View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "marginBottom": 16,
                    },
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "normal",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ]
                  }
                >
                  PINCreate.RememberPIN
                </Text>
                 
                PINCreate.PINDisclaimer
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "marginBottom": 24,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "bold",
                    },
                    Object {
                      "marginBottom": 8,
                    },
                  ]
                }
              >
                PINCreateConfirm.PINInputLabel
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#313132",
                    "borderColor": "#FFFFFFFF",
                    "borderRadius": 5,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "paddingHorizontal": 12,
                    "paddingVertical": 4,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                        Object {
                          "alignItems": "center",
                          "justifyContent": "flex-start",
                        },
                      ]
                    }
                  >
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <TextInput
                      accessibilityLabel="PINCreate.Masked"
                      accessibilityRole="text"
                      accessible={true}
                      autoCapitalize="characters"
                      autoCorrect={false}
                      autoFocus={false}
                      blurOnSubmit={false}
                      caretHidden={true}
                      clearButtonMode="never"
                      disableFullscreenUI={true}
                      keyboardType="number-pad"
                      maxLength={11}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onPressOut={[Function]}
                      onSubmitEditing={[Function]}
                      spellCheck={false}
                      style={
                        Object {
                          "bottom": 0,
                          "fontSize": 1,
                          "left": 0,
                          "opacity": 0.015,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                      testID="com.ariesbifold:id/EnterPIN"
                      textContentType="password"
                      underlineColorAndroid="transparent"
                      value=""
                    />
                  </View>
                </View>
                <View
                  accessibilityLabel="PINCreate.Show"
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                      "paddingLeft": 10,
                    }
                  }
                  testID="com.ariesbifold:id/Show"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`ConfirmPINModal Component Renders correctly for PIN create 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  presentationStyle="fullScreen"
  statusBarTranslucent={true}
  style={
    Object {
      "backgroundColor": "#000000",
    }
  }
  transparent={false}
  visible={true}
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
    style={
      Object {
        "backgroundColor": "#42803E",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": "#42803E",
        "borderWidth": 0,
        "elevation": 0,
        "flexDirection": "row",
        "minHeight": 44,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "zIndex": 2,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityLabel="Global.Back"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 44,
            "left": 44,
            "right": 44,
            "top": 44,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="com.ariesbifold:id/BackButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 15,
              "marginRight": 0,
              "minHeight": 26,
              "minWidth": 26,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 26,
                },
                undefined,
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            󰅁
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": 16,
          "maxWidth": "68%",
          "width": "100%",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        maxFontSizeMultiplier={2}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 28,
              "fontWeight": "bold",
            },
            Object {
              "textAlign": "center",
            },
          ]
        }
      >
        Title
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    />
  </View>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Object {
        "backgroundColor": "#000000",
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        keyboardShouldPersistTaps="handled"
      >
        <View>
          <View
            style={
              Object {
                "backgroundColor": "#000000",
                "flex": 1,
                "padding": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "paddingBottom": 32,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    Object {
                      "marginBottom": 16,
                    },
                  ]
                }
              >
                PINCreate.Header
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 28,
                      "fontWeight": "bold",
                    },
                    Object {},
                  ]
                }
              >
                PINCreate.Subheader
              </Text>
            </View>
            <View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "marginBottom": 16,
                    },
                  ]
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "normal",
                      },
                      Object {
                        "fontWeight": "bold",
                      },
                    ]
                  }
                >
                  PINCreate.RememberPIN
                </Text>
                 
                PINCreate.PINDisclaimer
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                  "marginBottom": 24,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "bold",
                    },
                    Object {
                      "marginBottom": 8,
                    },
                  ]
                }
              >
                PINCreateConfirm.PINInputLabel
              </Text>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#313132",
                    "borderColor": "#FFFFFFFF",
                    "borderRadius": 5,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "paddingHorizontal": 12,
                    "paddingVertical": 4,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                        Object {
                          "alignItems": "center",
                          "justifyContent": "flex-start",
                        },
                      ]
                    }
                  >
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <View
                      onLayout={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#313132",
                          "borderColor": "#313132",
                          "borderWidth": 1,
                          "height": 48,
                          "paddingHorizontal": 2,
                        }
                      }
                    >
                      <Text
                        maxFontSizeMultiplier={1}
                        style={
                          Array [
                            Object {
                              "color": "#FFFFFF",
                              "fontSize": 26,
                              "fontWeight": "bold",
                            },
                            Object {
                              "color": "#FFFFFF",
                              "lineHeight": 48,
                              "textAlign": "center",
                            },
                          ]
                        }
                      />
                    </View>
                    <TextInput
                      accessibilityLabel="PINCreate.Masked"
                      accessibilityRole="text"
                      accessible={true}
                      autoCapitalize="characters"
                      autoCorrect={false}
                      autoFocus={false}
                      blurOnSubmit={false}
                      caretHidden={true}
                      clearButtonMode="never"
                      disableFullscreenUI={true}
                      keyboardType="number-pad"
                      maxLength={11}
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onPressOut={[Function]}
                      onSubmitEditing={[Function]}
                      spellCheck={false}
                      style={
                        Object {
                          "bottom": 0,
                          "fontSize": 1,
                          "left": 0,
                          "opacity": 0.015,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                      testID="com.ariesbifold:id/EnterPIN"
                      textContentType="password"
                      underlineColorAndroid="transparent"
                      value=""
                    />
                  </View>
                </View>
                <View
                  accessibilityLabel="PINCreate.Show"
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                      "paddingLeft": 10,
                    }
                  }
                  testID="com.ariesbifold:id/Show"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RNCSafeAreaView>
</Modal>
`;
